Fix to educational bug and horizontal scroll on main div

--- a/repos/cvapp/src/App.css
+++ b/repos/cvapp/src/App.css
@@ -56,7 +56,7 @@
   flex-direction: column;
   padding: 20px;
   max-width: 1100px;
-  min-width: 900px;
+ 
 }
 
 input, textarea  {
@@ -98,4 +98,8 @@ label {
 
 #personal-details p {
   margin: 0;
+}
+
+.grad-date {
+  margin-left: auto;
 }
